Specify Java 8 version

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ test {
 }
 
 java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
     withJavadocJar()
     withSourcesJar()
 }
